--- a/server-side/package.json
+++ b/server-side/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.10.11",
+    "mongoose-timezone": "^1.3.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
