--- a/client-side/package.json
+++ b/client-side/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^16.13.1",
