--- a/server-side/package.json
+++ b/server-side/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
     "mongoose-timezone": "^1.3.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
