--- a/client-side/package.json
+++ b/client-side/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^16.13.1",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "socket.io-client": "^2.3.0"
