--- a/client-side/package.json
+++ b/client-side/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "stars-rating": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
