--- a/client-side/package.json
+++ b/client-side/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "bootstrap-less": "^3.3.8",
     "react": "^16.13.1",
+    "react-avatar": "^3.9.7",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
@@ -21,6 +22,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-sticky-box": "^0.9.3",
     "socket.io-client": "^2.3.0",
     "stars-rating": "^1.1.0"
   },
