fix bug last time

--- a/python-side/config.ini
+++ b/python-side/config.ini
@@ -1,5 +1,7 @@
 [INTENT]
-INTENT_THRESHOLD= 0.4
+INTENT_THRESHOLD= 0.3
 [DB]
 DB_NAME = chatbot
 DB_HOST = mongodb://localhost:27017
+[ENTITY]
+ENTITY_THRESHOLD = 0.8
